# bridge

./: .gitignore  CLAUDE.md  Makefile  Makefile.local  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.json
.claude/agents/: backend-agent.md  design-system-architect.md  devops-gcp-infra.md  frontend-agent.md  integration-agent.md  project-alignment-auditor.md
.claude/skills/dev-server/: SKILL.md
.claude/skills/openapi-manager/: SKILL.md
apps/api/: .dockerignore  .env.example  .env.test  Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 1ace71fc4600_add_onboarding_tables.py  7a0e1ff89060_initial_schema.py
apps/api/dashboards/: ops-kpis.yaml  revenue-dashboard.yaml
apps/api/scripts/: list_dashboards.py  list_routes.py  precompute_dashboard.py  seed_db.py  shell.py  validate_dashboard.py
apps/api/src/: main.py  openapi.yaml
apps/api/src/api/v1/: auth.py  dashboards.py  data.py  health.py  lineage.py  onboarding.py  precompute.py  router.py  schema.py  sql.py
apps/api/src/core/: cache.py  config.py  dependencies.py  exceptions.py  response.py  secrets.py
apps/api/src/db/: base.py  database.py
apps/api/src/integrations/: bigquery_client.py
apps/api/src/models/: db_models.py  yaml_schema.py
apps/api/src/services/: authentication.py  catalog.py  connection.py  dashboard_compiler.py  data_serving.py  lineage.py  precompute.py  schema.py  session.py  sql_executor.py  storage.py  yaml_validation.py
apps/api/tests/: test_phase1_integration.py
apps/web/: .env.local.example  README.frontend.md  README.md  next.config.js  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboards/: error.tsx  loading.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/components.backup/charts/: bar-chart.tsx  chart-card.tsx
apps/web/components.backup/dashboard/: dashboard-editor.tsx  dashboard-view.tsx
apps/web/components.backup/datasets/: dataset-browser.tsx
apps/web/components.backup/layout/: app-header.tsx  center-panel.tsx
apps/web/components/charts/: kpi-card.tsx  line-chart.tsx
apps/web/components/layout/: app-shell.tsx  left-panel.tsx  right-panel.tsx
apps/web/components/ui/: freshness-badge.tsx  scroll-area.tsx
apps/web/components/yaml/: yaml-viewer.tsx
apps/web/hooks/: use-dashboards.ts
apps/web/lib/: api-client.ts  query-client.ts  store.ts  utils.ts
apps/web/providers/: query-provider.tsx
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css
apps/web/src/app/dashboards/: page.tsx
apps/web/src/app/dashboards/[slug]/: page.tsx
apps/web/src/app/edit/[slug]/: page.tsx
apps/web/src/app/onboarding/: page.tsx
apps/web/src/components/: providers.tsx
apps/web/src/components/charts/: area-chart.tsx  bar-chart.tsx  chart-container.tsx  chart-renderer.tsx  index.ts  kpi-tile.tsx  line-chart.tsx  table-chart.tsx
apps/web/src/components/dashboard/: dashboard-grid.tsx  dashboard-widget.tsx  freshness-indicator.tsx  index.ts
apps/web/src/components/editor/: BuilderMode.tsx  PreviewTab.tsx  PropertyInspector.tsx  SaveWorkflow.tsx  YAMLEditor.tsx
apps/web/src/components/layout/: app-shell.tsx  assistant.tsx  explorer.tsx  header.tsx  workspace.tsx
apps/web/src/components/onboarding/: CatalogScanStep.tsx  ConnectionSetupStep.tsx  OnboardingLayout.tsx  TeamCreationStep.tsx
apps/web/src/components/ui/: alert.tsx  table.tsx
apps/web/src/contexts/: auth-context.tsx
apps/web/src/hooks/: use-dashboards.ts  use-onboarding.ts
apps/web/src/lib/: auth.ts  dashboard-loader.ts  query-client.ts  tokens.ts  utils.ts  yaml-parser.ts
apps/web/src/providers/: query-provider.tsx  theme-provider.tsx
apps/web/src/types/: dashboard.ts  onboarding.ts
apps/web/types/: dashboard.ts
docs/: backend_pdr.md  backend_tasks.md  cli_reference.md  frontend_analysis_summary.md  frontend_implementation_roadmap.md  frontend_pdr.md  frontend_tasks.md  system_alignment.md  task.md  task_reorganization_plan.md  ui_pdr.md  ux_wireframes.md
